# chess-rag

./: .env.example  .gitignore  CLAUDE.md  DESIGN.md  PRODUCTION_READINESS.md  README.md  TODOS.md  app.py  pyproject.toml  todos.md
data/: chess_index.faiss  chess_patterns.json
data/sources/: b.tsv  c.tsv  d.tsv  e.tsv  eco.json  patterns.md
examples/: sample_game.pgn
rag/: ingestion.py  parser.py  prompts.py  retriever.py
tests/: conftest.py  test_app.py  test_ingestion.py  test_parser.py  test_prompts.py  test_retriever.py
