[project]
name = "chess-rag"
version = "0.1.0"
description = "Chess game analysis with RAG — AI commentary grounded in opening theory and pattern knowledge"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.35",
    "chess>=1.10",
    "scikit-learn>=1.4",
    "groq>=0.9",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rag"]

[tool.uv]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "requires_index: tests that need the serialized TF-IDF index (run rag.ingestion first)",
]
